...
        label.textColor = UIColor.white.withAlphaComponent(0.8)
        label.font = UIFont.systemFont(ofSize: 16)
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
    
    private let phoneTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "802 123 4567"
        textField.textColor = .white
        textField.font = UIFont.systemFont(ofSize: 16)
        textField.keyboardType = .phonePad
        textField.accessibilityIdentifier = "phoneTextField"
...
        view.backgroundColor = UIColor.darkGray.withAlphaComponent(0.3)
        view.layer.cornerRadius = 8
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    
    private let passwordTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Enter password"
        textField.textColor = .white
        textField.font = UIFont.systemFont(ofSize: 16)
        textField.isSecureTextEntry = true
        textField.accessibilityIdentifier = "passwordTextField"
...
        button.setTitleColor(UIColor(red: 0.9, green: 0.7, blue: 0.0, alpha: 1.0), for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 14)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
    
    private let loginButton: UIButton = {
        let button = UIButton(type: .system)
        button.setTitle("Login", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 16, weight: .medium)
        button.backgroundColor = UIColor(red: 0.9, green: 0.7, blue: 0.0, alpha: 1.0)
        button.layer.cornerRadius = 10
...
        let navVC = CustomTabBarController() // Initialize your HomeViewController
        navVC.modalPresentationStyle = .fullScreen // Set the presentation style (optional)
        present(navVC, animated: true, completion: nil)
    }
    
    private func showErrorAlert(message: String) {
        let alert = UIAlertController(title: "Error", message: message, preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        present(alert, animated: true, completion: nil)
    }
    
    @objc private func forgotPasswordTapped() {
        // Handle forgot password
...
